--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
       repudiandae, sequi dicta sit incidunt facilis suscipit blanditiis
       perspiciatis voluptates fugiat quia.
     </p>
+    <form action="">
+      <input type="email" />
+      <input type="password" />
+      <button>login</button>
+    </form>
   </body>
 </html>
