--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <input type="email" />
       <input type="password" />
       <button>login</button>
+      <button>login2</button>
     </form>
   </body>
 </html>
